# penr-oz-ai-rag-service

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: generation.rs  lib.rs  main.rs  pipeline.rs  retrieval.rs
src/embedding/: error.rs  mock.rs  mod.rs  provider.rs
src/llm/: mock.rs  mod.rs
src/loader/: text.rs
src/vector/: memory.rs  mod.rs
tests/: embedding.rs  generation.rs  serve.rs
